yasinbaran.com.tr / brnysn.com

--- a/Button Hover Effect - 2/index.html
+++ b/Button Hover Effect - 2/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">  <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr">
-  <link rel="stylesheet" href="main.css">
-  <title>Button Hover Effect - 2</title>
-</head>
-<body>
-  <div class="container">
-    <a href="" class="box btn1">Hover Me</a>
-    <a href="" class="box btn2">Hover Me</a>
-    <a href="" class="box btn3">Hover Me</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Button Hover Effect - 2</title>
+  </head>
+  <body>
+    <div class="container">
+      <a href="" class="box btn1">Hover Me</a>
+      <a href="" class="box btn2">Hover Me</a>
+      <a href="" class="box btn3">Hover Me</a>
+    </div>
+  </body>
 </html>
