--- a/Login Page/index.html
+++ b/Login Page/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">  <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr">
-  <link rel="stylesheet" href="main.css">
-  <title>Login Page</title>
-</head>
-<body>
-  <form class="box" method="POST" target="_self">
-    <h1>login</h1>
-    <input type="text" name="username" id="username" placeholder="Username" autocomplete="off">
-    <input type="password" name="pass" id="pass" placeholder="Password" autocomplete="off">
-    <input type="submit" id="submit" value="login">
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Login Page</title>
+  </head>
+  <body>
+    <form class="box" method="POST" target="_self">
+      <h1>login</h1>
+      <input
+        type="text"
+        name="username"
+        id="username"
+        placeholder="Username"
+        autocomplete="off"
+      />
+      <input
+        type="password"
+        name="pass"
+        id="pass"
+        placeholder="Password"
+        autocomplete="off"
+      />
+      <input type="submit" id="submit" value="login" />
+    </form>
+  </body>
 </html>
