--- a/input [type="date"] placeholder/index.html
+++ b/input [type="date"] placeholder/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">  <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr">
-  <link rel="stylesheet" href="main.css">
-  <title>Button Hover Effect - 2</title>
-</head>
-<body>
-  <form class="box" method="POST" target="_self">
-    <h1>Type Date</h1>
-    <input placeholder="Type Date" type="text" onfocus="(this.type = 'date')"  id="date">
-    <input type="submit" id="submit" value="Submit">
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Button Hover Effect - 2</title>
+  </head>
+  <body>
+    <form class="box" method="POST" target="_self">
+      <h1>Type Date</h1>
+      <input
+        placeholder="Type Date"
+        type="text"
+        onfocus="(this.type = 'date')"
+        id="date"
+      />
+      <input type="submit" id="submit" value="Submit" />
+    </form>
+  </body>
 </html>
