yasinbaran.com.tr / codepen.io/brnysn/

--- a/Js Analog Clock/index.html
+++ b/Js Analog Clock/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Animal Sounds For Children</title>
+  <title>Js Analog Clock</title>
   <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
   <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-  <video src="https://user-content-hot-175.molyusercontentstage.me/xqx2ptrnkvokjiqbtfwcnkcd4ksacdhnmknimsc4m6ppmdkfiavv7jvevfoq/v.mp4" controls></video>
-  <div class="animals">
-    <!-- Suprised ? Look at the .js file  :-) -->
+  <!-- yasinbaran.com.tr / brnysn.com -->
+  <div class="clock">
+    <div class="clock-ring">
+      <div class="hand" id="hour"></div>
+      <div class="hand" id="min"></div>
+      <div class="hand" id="sec"></div>
+    </div>
   </div>
   <script src="src/main.js"></script>
 </body>
