yasinbaran.com.tr

--- a/Memory Game(Flip Card Efect)/index.html
+++ b/Memory Game(Flip Card Efect)/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Js Analog Clock -2</title>
+  <title>Memory Puzzle (Flip Card Efect)</title>
   <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
   <link rel="stylesheet" href="src/style.css">
 </head>
+
 <body>
   <!-- yasinbaran.com.tr / brnysn.com -->
-  <div class="clock">
-    <div class="clock-ring">
-      <div class="hand hour" id="hour"></div>
-      <div class="hand min" id="min"></div>
-      <div class="hand sec" id="sec"></div>
+  <header>
+    <h1>Memory Puzzle</h1>
+  </header>
+
+  <main>
+    <div class="card_container" id="card_container">
     </div>
-  </div>
+  </main>
   <script src="src/main.js"></script>
 </body>
+
 </html>
