yasinbaran.com.tr / brnysn.com

--- a/Sample Home Page/index.html
+++ b/Sample Home Page/index.html
@@ -44,7 +44,11 @@
         </section>
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function(){
+        setTimeout(function(){alert('Please Resize Window');}, 2500)
+    })
+    </script>
 </body>
 
 </html>
