yasinbaran.com.tr

--- a/3d Button Hover Effect/index.html
+++ b/3d Button Hover Effect/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Memory Puzzle (Flip Card Efect)</title>
+  <title>3d Button Hover Effect</title>
   <meta name="author" content="Yasin BARAN brnysn.com / yasinbaran.com.tr" />
   <link rel="stylesheet" href="src/style.css">
 </head>
